<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udistrtital.sebastianvergara.fastfood.AgregarPuntos">


    <AbsoluteLayout
        android:layout_width="wrap_content"
        android:layout_height="643dp"
        android:background="@drawable/fondo2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/addtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/TituloAddPuntos"
                    android:textSize="30dp"/>
                <EditText
                    android:id="@+id/nombreLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addtitle"
                    android:hint="@string/addLugar"
                    android:maxLines="1"/>
                <EditText
                    android:id="@+id/latLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nombreLugar"
                    android:hint="@string/lat"
                    android:maxLines="1"/>
                <EditText
                    android:id="@+id/lngLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/latLugar"
                    android:hint="@string/lng"
                    android:maxLines="1"/>
                <EditText
                    android:id="@+id/idLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lngLugar"
                    android:hint="@string/idLugar"
                    android:maxLines="1"/>

                <Button
                    android:id="@+id/btnGuardarAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/idLugar"
                    android:layout_centerHorizontal="true"
                    android:text="@string/save"/>
                <Button
                    android:id="@+id/btnVerificarExistencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnGuardarAdd"
                    android:layout_centerHorizontal="true"
                    android:text="@string/verificarExistencia"/>

            </RelativeLayout>
        </ScrollView>
    </AbsoluteLayout>




</android.support.constraint.ConstraintLayout>
